Opened 3 years ago
Closed 3 years ago
#10251 closed defect (fixed)
[Bisected] mplayer can no longer play Ogg Vorbis files due to libavcodec change
| Reported by: | synchronicity | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | |
| Cc: | synchronicity | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | yes |
Description
After upgrading to mplayer-38412 and ffmpeg-6.0, Ogg Vorbis audio files can no longer be played. There are no error messages printed; "Exiting... (End of file)" just appears right away.
I've bisected the bug to the following ffmpeg commit:
commit 8fc2dedfe6e8fcc58dd052bf3b85cd4754133b17
Author: Jyrki Vesterinen <jyrkive@nekonyansoft.com>
Date: Thu Sep 8 14:36:32 2022 +0300
avcodec/vorbisdec: don't use a flag to determine if frames have been output
The bug is seen with latest mplayer SVN combined with the latest ffmpeg git. Reverting the above commit on top of latest ffmpeg git fixes the bug.
Arch Linux bug report is https://bugs.archlinux.org/task/77813
Change History (1)
comment:1 by , 3 years ago
| Analyzed by developer: | set |
|---|---|
| Priority: | normal → important |
| Resolution: | → fixed |
| Status: | new → closed |
| Version: | unspecified → git-master |



Fixed in cbcc817353a019da4332ad43deb7bbc4e695d02a, and backported as 3980415627a187d188dc25669cea6b12912eb178 to the release/6.0 branch.